--- a/src/styles.css
+++ b/src/styles.css
@@ -11,86 +11,42 @@ body {
 
 main {
   margin: 30px;
+  text-align: justify;
+}
+
+header,
+footer {
+  background-color: #b3bfb8;
+  text-align: center;
+  padding: 5px;
 }
 
 h1 {
-  text-align: center;
-  background-color: black;
-  color: yellow;
+  text-align: right;
+  color: #f0f7f4;
   margin: 0;
-  padding: 15px;
-}
-
-p {
-  text-align: justify;
+  display: inline-block;
 }
 
 .navBox {
   list-style: none;
-  text-align: center;
   margin: 0;
-  background-color: black;
-  padding: 0 10px 10px;
+  display: inline-block;
 }
 
 .navItem {
   display: inline-block;
-  padding: 0 10px;
-  color: yellow;
+  padding: 5px 10px;
+  color: #3c493f;
 }
 
 li:hover {
-  background-color: yellow;
-  color: black;
+  color: #f0f7f4;
 }
 
-.main {
-  margin: 0 10%;
-}
-
-input,
-select {
-  margin: 20px 10px 0;
-}
-
-.card {
-  background-color: yellow;
-  width: 150px;
-  display: inline-block;
-  margin: 20px;
-  padding: 0 30px;
-  border: black solid 4px;
-  border-radius: 25px;
-  box-shadow: grey 10px 10px;
-}
-
-.code {
-  color: yellow;
-  background-color: darkblue;
-  padding: 15px;
-  border-radius: 10px;
-}
-
-hr {
-  margin: 20px 0;
-}
-
-button {
-  height: 30px;
-  width: 80px;
-  border-radius: 10px;
-  background-color: yellow;
-  color: maroon;
-  margin: 0 20px;
-}
-
-.footer {
+footer {
   position: fixed;
   bottom: 0;
-  background-color: black;
-  color: yellow;
-  margin: 0;
   width: 100%;
-  text-align: center;
   padding: 7px;
 }
