--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
@@ -7,90 +12,77 @@ body {
   margin: 0;
   font-family: arial;
   margin-bottom: 100px;
+  background-color: #0b0c10;
 }
 
 main {
   margin: 30px;
+  text-align: justify;
+}
+
+header,
+footer {
+  margin: auto;
+  text-align: center;
+  padding: 5px;
+  color: #45a29e;
 }
 
 h1 {
-  text-align: center;
-  background-color: black;
-  color: yellow;
+  text-align: right;
+  color: #45a29e;
   margin: 0;
-  padding: 15px;
-}
-
-p {
-  text-align: justify;
+  display: inline-block;
 }
 
 .navBox {
   list-style: none;
-  text-align: center;
   margin: 0;
-  background-color: black;
-  padding: 0 10px 10px;
+  display: inline-block;
 }
 
 .navItem {
   display: inline-block;
   padding: 0 10px;
-  color: yellow;
+  color: #66fcf1;
 }
 
 li:hover {
-  background-color: yellow;
-  color: black;
+  color: #f0f7f4;
 }
 
-.main {
-  margin: 0 10%;
+.newsBox {
+  width: 450px;
+  background-color: #c5c6c7;
+  border-radius: 20px;
+  padding: 20px;
+  margin: auto;
 }
 
-input,
-select {
-  margin: 20px 10px 0;
+.newsBox img {
+  max-height: 300px;
+  width: auto;
+  display: block;
+  margin: auto;
+  text-align: center;
 }
 
-.card {
-  background-color: yellow;
-  width: 150px;
-  display: inline-block;
-  margin: 20px;
-  padding: 0 30px;
-  border: black solid 4px;
-  border-radius: 25px;
-  box-shadow: grey 10px 10px;
+.newsBox h2,
+h3 {
+  text-align: center;
+  color: #0b0c10;
+  margin: 10px 0;
 }
 
-.code {
-  color: yellow;
-  background-color: darkblue;
-  padding: 15px;
-  border-radius: 10px;
+.newsBox p {
+  color: #1f2833;
+  text-align: justify;
+  margin: 10px;
 }
 
-hr {
-  margin: 20px 0;
-}
-
-button {
-  height: 30px;
-  width: 80px;
-  border-radius: 10px;
-  background-color: yellow;
-  color: maroon;
-  margin: 0 20px;
-}
-
-.footer {
+footer {
   position: fixed;
   bottom: 0;
-  background-color: black;
-  color: yellow;
-  margin: 0;
   width: 100%;
-  text-align: center;
   padding: 7px;
 }
